Issue: #FT-2027 Component: Changes: Fixed the issue: Last question will be covered a bit if questions more than a screen

--- a/TripfinderWeb/TripfinderWeb/Global/Css/form.less
+++ b/TripfinderWeb/TripfinderWeb/Global/Css/form.less
@@ -1253,18 +1253,18 @@
 		.form
 		{
 			padding: 0;
-	
+
 			.form-header
 			{
 				height: 150px;
 				padding: 5px 20px;
-	
+
 				.form-title
 				{
 					padding: 5px 0;
 					font-size: 24px;
 				}
-	
+
 				.form-subtitle
 				{
 					font-size: 14px;
@@ -1429,15 +1429,15 @@
 			.form
 			{
 				padding: 0;
-	
+
 				.form-header
 				{
-					height: 100px;
+					height: 120px;
 				}
 
 				.form-body
 				{
-					top: 100px;
+					top: 120px;
 					//height: initial !important;
 				}
 			}
